<resources>
    <string name="app_name">hike</string>
    <string name="app_label">&#160;hike</string>
    <string name="invite">Tell a friend</string>
    <string name="deleteconversations">Delete all conversations</string>
    <string name="send">Send</string>
    <string name="type_to_compose">Type to Compose</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_question">Are you sure you want to delete all your conversations?</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="preferences">Preferences</string>
    <string name="resend">Resend</string>
    <string name="delete_account_failed">hike couldn\'t delete your account. Please try again.</string>
    <string name="hike_network_connection">Network Connection</string>
    <string name="notconnected_data_disabled">Boss, you\'ve got to turn on data to experience hike!</string>
    <string name="notconnected_no_internet">Boss, check the internet!</string>
    <string name="already_hike_user">Good News! Your friend is already on hike!</string>
    <string name="block_users">Block Users</string>
    <string name="profile_title">Profile</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="update_profile_failed">Could not update profile</string>
    <string name="image_failed">Unable to open image</string>
    <string name="block_title">Block</string>
    <string name="unblock_title">Unblock</string>
    <string name="feedback">Feedback</string>
    <string name="sending_feedback">Sending Feedback</string>
    <string name="sending_feedback_failed">Unable to send feedback</string>
    <string name="feedback_hint">We\'d love to hear from you...</string>
    <string name="block_overlay_message">You\'ve blocked %1$s.  Unblock and continue hiking.</string>
    <string name="how_hike_feel">How does hike make you feel?</string>
    <string name="feedback_success">Thanks for your feedback!</string>
    <string name="phone_num">Phone Number</string>
    <string name="pin">PIN</string>
    <string name="name">Name</string>
    <string name="terms_privacy">Terms and Privacy</string>
    <string name="invite_now">Invite now</string>
    <string name="disclaimer_india">Free SMS can only be sent to India at the moment.</string>
    <string name="earn_200_sms">Invite friends, earn more free SMS.</string>
    <string name="dnd_message">We can\'t send %1$s a message as this person is on the DND list. For %1$s to receive hike messages, %1$s needs to opt-in to hike by giving a missed call to %2$s.\n\nYou\'ll get an extra 10 free SMS\' per month if %1$s opts-in!\n\nTo send this information to %1$s as a normal SMS, tap here.</string>
    <string name="dnd_invite_message">Hey, I\'m using hike to send SMS for free! For you to start receiving messages from hike, I need you to opt-in. Just give a missed call to %1$s.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_sd_card">Please insert an SD Card</string>
    <string name="press_btn_invite">To invite %1$s to hike, tap here.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="joined_conversation">%1$s joined the group chat!</string>
    <string name="left_conversation">%1$s left the group chat.</string>
    <string name="removed_from_broadcast">%1$s removed from broadcast list</string>
    <string name="leave_group">Leave Group</string>
    <string name="delete_broadcast">Delete Broadcast</string>
    <string name="group_chat_end">This group chat has ended.</string>
    <string name="broadcast_list_end">This broadcast list has ended.</string>
    <string name="group_info">Group Info</string>
    <string name="broadcast_info">Broadcast Info</string>
    <string name="tap_group_info">Tap this button for group info.</string>
    <string name="invite_all_to_hike">Invite members on SMS to hike</string>
    <string name="friend_joined_hike_no_creds">%1$s just joined hike because of you. Great job!</string>
    <string name="friend_joined_hike_with_creds">%1$s just joined hike because of you. Great job! As promised, here are your additional 50 free SMS for bringing a friend. To see your total free SMS, tap here.</string>
    <string name="default_invite_url">http://get.hike.in/%1$s</string>
    <string name="tap_share">Tap to share your unique invite URL:</string>
    <string name="done">Done</string>
    <string name="group_chat">Group Chat</string>
    <string name="new_message">New Message</string>
    <string name="add_group">Add to Group</string>
    <string name="add_broadcast">Add to Broadcast List</string>
    <string name="max_sms">Max 5 SMS contacts in a group.</string>
    <string name="max_contact">Max 50 contacts in a group.</string>
    <string name="sms_renew">Refills on the 1st of every month</string>
    <string name="invite_friend_free_sms">Earn an extra 50 free SMS per month for every friend that joins hike because of you.</string>
    <string name="free_sms_50">50 free SMS</string>
    <string name="group_chat_free">Group chat is free till 31st Dec.\nCredits don\'t apply.</string>
    <string name="sms_disclaimer">*SMSs that are received and shown in hike are\nstored locally and never uploaded to our servers.\n\nWe promise.</string>
    <string name="sms_alert_text">You can now receive all your SMSs in hike. Tap below to turn this feature on.</string>
    <string name="sms">SMS</string>
    <string name="turn_on">Turn On</string>
    <string name="block_owner">Block group owner</string>
    <string name="unblock_owner">Unblock group owner</string>
    <string name="no_thanks">Not now</string>
    <string name="tap_to_message">Tap here to message this person</string>
    <string name="tap_to_add">Tap here to add this person</string>
    <string name="call">Call</string>
    <string name="we_have_gc">Tap the menu to start a Group Chat.</string>
    <string name="upload_failed">Could not upload file. Check network settings.</string>
    <string name="opt_in">%1$s just opted in!</string>
    <string name="dnd_msg_gc">Waiting for %1$s to reply to join in</string>
    <string name="earned_credits">You\'ve just earned %1$s free SMS</string>
    <string name="earned_credits_highlight">%1$s free SMS</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="invite_via_sms">Invite via SMS</string>
    <string name="free_sms_msg">Turn on to send free SMS to India</string>
    <string name="auto_download_media">Auto download media</string>
    <string name="md_auto_download_media">AUTO DOWNLOAD MEDIA : MOBILE</string>
    <string name="wf_auto_download_media">AUTO DOWNLOAD MEDIA : WI-FI</string>
    <string name="auto_download_image_title">Images</string>
    <string name="auto_download_video_title">Video</string>
    <string name="auto_download_audio_title">Audio</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy">Privacy</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="faq">FAQs</string>
    <string name="other">Other</string>
    <string name="free_sms_txt">Free SMS</string>
    <string name="blocked_list">Blocked List</string>
    <string name="mute_group">Mute Group</string>
    <string name="ssl">128-bit SSL</string>
    <string name="ssl_info">Wi-Fi only</string>
    <string name="system_health">System Health</string>
    <string name="manage_account">Account</string>
    <string name="default_client_header">Unified Inbox</string>
    <string name="default_client_info">Receive regular SMS within hike</string>
    <string name="last_seen_header">Show Last Seen</string>
    <string name="attach">Attach</string>
    <string name="search">Search</string>
    <string name="invite_subtext">Earn additional free SMS for every friend that joins hike through your SMS invite.</string>
    <string name="feedback_hinttext">Give us feedback</string>
    <string name="faq_hinttext">Frequently Asked Questions</string>
    <string name="blocked_list_hinttext">Manage people you\'ve blocked</string>
    <string name="system_health_hinttext">See hike system status</string>
    <string name="more_hike_more_earn">The more you use hike, the more you earn!</string>
    <string name="free_hike_to_sms">Free hike to SMS</string>
    <string name="last_seen_favorite_info">Turning off last seen will hide your favorites\' last seen status from you as well</string>
    <string name="reset_complete_stealth_header">Reset Hidden Mode</string>
    <string name="reset_complete_stealth_info">Forgot your password? Reset Hidden Mode. All hidden chats will be deleted.</string>
    <string name="edit">Edit</string>
    <string name="unlink_hinttext">Clear your messages and profile from this device.</string>
    <string name="unlink_account">Reset Account</string>
    <string name="delete_account_msg">Delete your Hike account.</string>
    <string name="hike_offline">Hike Offline</string>
    <string name="earn_free_sms">Earn free SMS</string>
    <string name="change_stealth_password">Change Password</string>
    <string name="change_stealth_password_body">Change your Hidden Mode password. Also change between pattern and PIN.</string>
    <string name="undelivered_sms_setting_summary">Always ask for preference</string>
    <string name="profile_pic_header">Profile Picture</string>
    <string name="profile_pic_display_info">Show only to your Favorites</string>
    <string name="create_pin">Create Pin</string>
    <string name="refresh">Refresh</string>
    <string name="voip_call_chat">Hike Call</string>
    <string name="video_compress">VIDEO COMPRESSION</string>
    <string name="send_compress_video">Send Compressed Video</string>
    <string name="stealth_mode_title">Hidden Mode</string>
    <string name="stealth_mode_title_body">Hidden Mode Settings</string>
    <string name="change_stealth_timeout">Ask for Password</string>
    <string name="change_stealth_timeout_body">Ask for password again only after a specific time</string>
    <string name="stealth_password_settings">PASSWORD SETTINGS</string>
    <string name="stealth_notification_settings">NOTIFICATION SETTINGS</string>
    <string name="stealth_reset_settings">EXTRA SETTINGS</string>
    <string name="enable_stealth_indicator">Indicator</string>
    <string name="enable_stealth_indicator_body">Bounce \'hi\' logo on home screen for unread messages</string>
    <string name="enable_stealth_notification_body">Notify on receiving a message in a hidden chat</string>
    <string name="enable_stealth_notification">Notification</string>
    <string name="nudge_setting_header">Double tap to Nudge</string>
    <string name="nudge_setting_info">Send a Nudge by double tapping while chatting</string>
    <string name="enter_setting_header">Enter key is send</string>
    <string name="enter_setting_info">Pressing enter key will send the message</string>
    <string name="settings_chat">Chat Settings</string>
    <string name="terms_conditions_hint">Terms and Conditions</string>
    <string name="terms_conditions_title">T &amp; C</string>
	<string name="sticker_recommendation_setting_info">Tap on blue words for suggestions</string>
	<string name="sticker_recommendation_setting_header">Sticker Suggestions</string>
    <string name="sticker_reorder_setting_info">Rearrange/Hide packs from the sticker pallete</string>
    <string name="sticker_reorder_setting_header">Change sticker pack order</string>
    <string name="sticker_recommendation_autopopup_setting_info">Display sticker automatically as I type</string>
    <string name="sticker_recommendation_autopopup_setting_header">Auto Suggest Stickers</string>
    <string name="pref_message_settings">MESSAGE SETTINGS</string>
    <string name="pref_sticker_settings">STICKER SETTINGS</string>
    <string name="add_member_menu">Add a member</string>
</resources>