<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/privacy">

<!--     icon="@drawable/ic_blocked_list" -->
    <com.bsb.hike.view.IconPreference
		icon="@drawable/ic_blocked_list_settings"
		android:layout="@layout/icon_preference"
        android:key="blockedList"
        android:summary="@string/blocked_list_hinttext"
        android:title="@string/blocked_list" />
    
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="@drawable/ic_profile_picture"
        android:defaultValue="false"
        android:key="profilePicPref"
        android:layout="@layout/icon_preference"
        android:summary="@string/profile_pic_display_info"
        android:title="@string/profile_pic_header"
        android:widgetLayout="@layout/checkbox_widget" />
    
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="@drawable/preference_last_seen"
        android:defaultValue="true"
        android:key="lastSeenPref"
        android:layout="@layout/icon_preference"
        android:summary="@string/last_seen_favorite_info"
        android:title="@string/last_seen_header"
        android:widgetLayout="@layout/checkbox_widget" />
    
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="@drawable/ic_ssl"
        android:key="sslPref"
        android:layout="@layout/icon_preference"
        android:summary="@string/ssl_info"
        android:title="@string/ssl"
        android:widgetLayout="@layout/checkbox_widget" />

    <PreferenceScreen
        icon="@drawable/ic_reset_stealth"
        android:title="@string/stealth_mode_title"
        android:layout="@layout/icon_preference"
        android:summary="@string/stealth_mode_title_body">
        
        <PreferenceCategory
            android:selectable="false"
            android:title="@string/stealth_password_settings">
            
        	<com.bsb.hike.view.IconPreference
				icon="@drawable/ic_reset_stealth"
				android:key="changeStealthPasscode"
				android:layout="@layout/icon_preference"
				android:summary="@string/change_stealth_password_body"
				android:title="@string/change_stealth_password" />
        	 
			<com.bsb.hike.view.IconListPreference
				icon="@drawable/ic_reset_stealth" 
				android:defaultValue="@string/vib_default"
		        android:entries="@array/vibratePrefKeys"
		        android:entryValues="@array/vibratePrefValues"
		        android:key="changeStealthTimeOut"
		        android:layout="@layout/list_preference"
		        android:summary="@string/change_stealth_timeout_body"
		        android:title="@string/change_stealth_timeout" /> 
        </PreferenceCategory>
        
        <PreferenceCategory
            android:selectable="false"
            android:title="@string/stealth_notification_settings">
            
        	<com.bsb.hike.view.IconCheckBoxPreference
				icon="@drawable/preference_last_seen"
		        android:defaultValue="true"
		        android:key="stealthIndicatorEnabled"
		        android:layout="@layout/icon_preference"
		        android:summary="@string/enable_stealth_indicator_body"
		        android:title="@string/enable_stealth_indicator" 
		        android:widgetLayout="@layout/checkbox_widget" />
        	
        	<com.bsb.hike.view.IconCheckBoxPreference
				icon="@drawable/preference_last_seen"
		        android:defaultValue="true"
		        android:key="stealthNotificationEnabled"
		        android:layout="@layout/icon_preference"
		        android:summary="@string/enable_stealth_notification_body"
		        android:title="@string/enable_stealth_notification" 
		        android:widgetLayout="@layout/checkbox_widget" />
        </PreferenceCategory>
        
	    <PreferenceCategory
            android:selectable="false"
            android:title="Reset Settings" >
		    
		    <com.bsb.hike.view.IconPreference
				icon="@drawable/ic_reset_stealth"
		        android:key="resetStealthPref"
		        android:layout="@layout/icon_preference"
		        android:summary="@string/reset_complete_stealth_info"
		        android:title="@string/reset_complete_stealth_header" />
		</PreferenceCategory>
		     
     </PreferenceScreen>
    
</PreferenceScreen>