<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/stealth_mode_title"
    android:key="stealthPrefScreen" >

    <PreferenceCategory
        android:selectable="false"
        android:layout="@layout/settings_section_header"
        android:title="@string/stealth_password_settings" >
        
        <com.bsb.hike.view.IconPreference
            icon="@drawable/blankspace"
            android:key="changeStealthPasscode"
            android:layout="@layout/icon_preference"
            android:summary="@string/change_stealth_password_body"
            android:title="@string/change_stealth_password" />
<!--  
        <com.bsb.hike.view.IconListPreference
            icon="@drawable/blankspace"
            android:defaultValue="@string/stealth_timeout_always"
            android:entries="@array/stealthTimeoutPrefKeys"
            android:entryValues="@array/stealthTimeoutPrefValues"
            android:key="changeStealthTimeout"
            android:layout="@layout/list_preference"
            android:summary="@string/change_stealth_timeout_body"
            android:title="@string/change_stealth_timeout" />
-->
    </PreferenceCategory>
    <PreferenceCategory
        android:selectable="false"
        android:layout="@layout/settings_section_header"
        android:title="@string/stealth_notification_settings" >
        
        <com.bsb.hike.view.SwitchPreferenceCompat
             icon="@drawable/blankspace"
            android:defaultValue="true"
            android:key="stealthIndicatorEnabled"
            android:layout="@layout/icon_preference"
            android:summary="@string/enable_stealth_indicator_body"
            android:title="@string/enable_stealth_indicator"
            android:widgetLayout="@layout/switch_widget" />
        <com.bsb.hike.view.SwitchPreferenceCompat
             icon="@drawable/blankspace"
            android:defaultValue="true"
            android:key="stealthNotificationEnabled"
            android:layout="@layout/icon_preference"
            android:summary="@string/enable_stealth_notification_body"
            android:title="@string/enable_stealth_notification"
            android:widgetLayout="@layout/switch_widget" />
    </PreferenceCategory>
    <PreferenceCategory
        android:selectable="false"
        android:title="@string/stealth_reset_settings"
        android:layout="@layout/settings_section_header" >
        
        <com.bsb.hike.view.IconPreference
             icon="@drawable/blankspace"
            android:key="resetStealthPref"
            android:layout="@layout/icon_preference"
            android:summary="@string/reset_complete_stealth_info"
            android:title="@string/reset_complete_stealth_header" />
    </PreferenceCategory>

</PreferenceScreen>
