<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/edit_pic"
		android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        android:title="@string/edit"/>

    <item
        android:id="@+id/forward_msgs"
        android:icon="@drawable/actionbar_ic_forward"
        app:showAsAction="always"
        android:title="@string/forward"/>
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_overflow_home"
        app:showAsAction="always"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/share_msgs"
                app:showAsAction="never"
                android:title="@string/share"/>
            <item
                android:id="@+id/delete_msgs"
                app:showAsAction="never"
                android:title="@string/delete"/>
        </menu>
    </item>

</menu>