<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/message_info"
        android:icon="@drawable/ic_message_info"
        app:showAsAction="always"
        android:title="@string/message_info"
        android:visible="false"/>
    <item
        android:id="@+id/delete_msgs"
        android:icon="@drawable/actionbar_ic_delete"
        app:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/share_msgs"
        android:icon="@drawable/share_icon"
        app:showAsAction="always"
        android:title="@string/share"
        android:visible="false"/>
    <item
        android:id="@+id/copy_msgs"
        android:icon="@drawable/actionbar_ic_copy"
        app:showAsAction="always"
        android:title="@string/copy"
        android:visible="false"/>
    <item
        android:id="@+id/forward_msgs"
        android:icon="@drawable/actionbar_ic_forward"
        app:showAsAction="always"
        android:title="@string/forward"/>
    <item
        android:id="@+id/action_mode_overflow_menu"
        android:icon="@drawable/ic_overflow_home"
        app:showAsAction="always"
        android:title="@string/other"
        android:visible="false"/>

</menu>