<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/auto_download_media" >

 	<PreferenceCategory
 	    android:key="videoCompressCategory"
        android:layout="@layout/settings_section_header"
        android:orderingFromXml="true"
        android:selectable="false"
        android:title="@string/video_compress" >
        
        <com.bsb.hike.view.SwitchPreferenceCompat
            android:key="videoCompress"
            android:defaultValue="true"
            android:layout="@layout/icon_preference"
            android:title="@string/send_compress_video"
            android:widgetLayout="@layout/switch_widget" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:orderingFromXml="true"
        android:selectable="false"
        android:layout="@layout/settings_section_header"
        android:title="@string/md_auto_download_media" >
        
        <com.bsb.hike.view.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="mdAutoDownloadImagePref"
            android:layout="@layout/icon_preference"
            android:title="@string/auto_download_image_title"
            android:widgetLayout="@layout/switch_widget" />
        
        <com.bsb.hike.view.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="mdAutoDownloadVideoPref"
            android:layout="@layout/icon_preference"
            android:title="@string/auto_download_video_title"
            android:widgetLayout="@layout/switch_widget" />
        
        <com.bsb.hike.view.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="mdAutoDownloadAudioPref"
            android:layout="@layout/icon_preference"
            android:title="@string/auto_download_audio_title"
            android:widgetLayout="@layout/switch_widget" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:orderingFromXml="true"
        android:selectable="false"
         android:layout="@layout/settings_section_header"
        android:title="@string/wf_auto_download_media" >
        
        <com.bsb.hike.view.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="wfAutoDownloadImagePref"
            android:layout="@layout/icon_preference"
            android:title="@string/auto_download_image_title"
            android:widgetLayout="@layout/switch_widget" />
        
        <com.bsb.hike.view.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="wfAutoDownloadVideoPref"
            android:layout="@layout/icon_preference"
            android:title="@string/auto_download_video_title"
            android:widgetLayout="@layout/switch_widget" />
        
        <com.bsb.hike.view.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="wfAutoDownloadAudioPref"
            android:layout="@layout/icon_preference"
            android:title="@string/auto_download_audio_title"
            android:widgetLayout="@layout/switch_widget" />
        
    </PreferenceCategory>

</PreferenceScreen>