<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_top_bar_search"
        android:title="@string/search"
        app:actionLayout="@layout/search_layout"
        app:showAsAction="always|collapseActionView"></item>

    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_overflow_home"
        android:title="@string/other"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/refresh_contacts"
                android:title="@string/refresh"
                android:visible="true"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
